Se agrega nav-bar en la landing

--- a/index.html
+++ b/index.html
@@ -16,7 +16,39 @@
         <link rel="stylesheet" href="./assets/css/style.css">
     </head>
     <body>
-
+        <header>
+            <!-- navbar -->
+            <nav class="navbar navbar-expand-lg fixed-top">
+                <div class="container">
+                    <a class="navbar-brand d-flex align-items-center" href="#">
+                        <img src="./assets/img/viajes.svg" alt="Logo Viaje Chile" width="30">
+                        <p class="ms-2 mb-0">Viajes Chile</p>
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav ms-auto">
+                            <li class="nav-item">
+                                <a class="nav-link px-3 active" aria-current="page" href="#acerca_de_mi">Inicio</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link px-3" href="#mi_trabajo">Quienes Somos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link px-3" href="#contactame">Destacados</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link px-3" href="#contactame">Contacto</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </header>  
+    
+    
         <!-- CDN's js -->
         <script src="https://kit.fontawesome.com/973a364027.js" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.7.1.js"
