Se agrega sección quienes somos

--- a/index.html
+++ b/index.html
@@ -77,6 +77,32 @@
             </div>
         </header>
 
+        <main>
+            <section class="container my-5" id="quienes_somos">
+                <h2 class="text-center mb-2">QUIENES SOMOS</h2>
+                <hr class=" mb-5">
+                <div class="row">
+                    <div class="col-md-4">
+                        <p class=" text-center section_text"><i class="fa-solid fa-plane fa-2x"></i></p>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque accumsan vitae sapien sit amet sodales. Duis non semper erat, et elementum lectus. Ut et euismod nisl. Praesent molestie eu nisl mollis semper. Sed volutpat scelerisque pulvinar. Sed eu vehicula sapien. Fusce non pulvinar erat. Duis leo eros, hendrerit vitae vulputate vitae, condimentum a neque. Praesent purus felis, porta at odio sit amet, congue gravida mauris. Phasellus gravida gravida lobortis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce vel volutpat leo. Morbi congue convallis aliquet. Aenean id neque eu dui fringilla pellentesque a sit amet nibh. Sed in dapibus orci, ac feugiat nibh.
+                        </p>
+                    </div>
+                    <div class="col-md-4">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque accumsan vitae sapien sit amet sodales. Duis non semper erat, et elementum lectus. Ut et euismod nisl. Praesent molestie eu nisl mollis semper. Sed volutpat scelerisque pulvinar. Sed eu vehicula sapien. Fusce non pulvinar erat. Duis leo eros, hendrerit vitae vulputate vitae, condimentum a neque. Praesent purus felis, porta at odio sit amet, congue gravida mauris. Phasellus gravida gravida lobortis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce vel volutpat leo. Morbi congue convallis aliquet. Aenean id neque eu dui fringilla pellentesque a sit amet nibh. Sed in dapibus orci, ac feugiat nibh.
+                        </p>
+                        <p class=" text-center section_text"><i class="fa-solid fa-mountain fa-2x"></i></p>
+                    </div>
+                    <div class="col-md-4">
+                        <p class=" text-center section_text"><i class="fa-solid fa-route fa-2x"></i></p>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque accumsan vitae sapien sit amet sodales. Duis non semper erat, et elementum lectus. Ut et euismod nisl. Praesent molestie eu nisl mollis semper. Sed volutpat scelerisque pulvinar. Sed eu vehicula sapien. Fusce non pulvinar erat. Duis leo eros, hendrerit vitae vulputate vitae, condimentum a neque. Praesent purus felis, porta at odio sit amet, congue gravida mauris. Phasellus gravida gravida lobortis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce vel volutpat leo. Morbi congue convallis aliquet. Aenean id neque eu dui fringilla pellentesque a sit amet nibh. Sed in dapibus orci, ac feugiat nibh.
+                        </p>
+                    </div>
+                </div>
+            </section>
+        </main>        
     
     
         <!-- CDN's js -->
