--- a/index.html
+++ b/index.html
@@ -102,6 +102,49 @@
                     </div>
                 </div>
             </section>
+
+            <section class="container my-5" id="destacados">
+                <h2 class="text-center mb-2">DESTACADOS</h2>
+                <hr class=" mb-5">
+                <div class="row">
+                    <div class="col-md-3 mb-4">
+                        <div class="card">
+                            <img src="./assets/img/card1.jpg" class="card-img-top img-fluid" alt="Imagen de asado">
+                            <div class="card-body">
+                                <h4 class="card-title">Asado en la Patagonia</h4>
+                                <p class="card-text mb-4">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3 mb-4">
+                        <div class="card">
+                            <img src="./assets/img/card2.jpg" class="card-img-top img-fluid" alt="Imagen de asado">
+                            <div class="card-body">
+                                <h4 class="card-title">Asado en la Patagonia</h4>
+                                <p class="card-text mb-4">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3 mb-4">
+                        <div class="card">
+                            <img src="./assets/img/card3.jpg" class="card-img-top img-fluid" alt="Imagen de asado">
+                            <div class="card-body">
+                                <h4 class="card-title">Asado en la Patagonia</h4>
+                                <p class="card-text mb-4">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3 mb-4">
+                        <div class="card">
+                            <img src="./assets/img/card4.jpg" class="card-img-top img-fluid" alt="Imagen de asado">
+                            <div class="card-body">
+                                <h4 class="card-title">Asado en la Patagonia</h4>
+                                <p class="card-text mb-4">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>        
     
     
