Se linkea el menú con cada sección de la landing y además se cambia color principal

--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item">
-                                <a class="nav-link px-3 active" aria-current="page" href="#acerca_de_mi">Inicio</a>
+                                <a class="nav-link px-3 active" aria-current="page" href="#">Inicio</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link px-3" href="#mi_trabajo">Quienes Somos</a>
+                                <a class="nav-link px-3" href="#quienes_somos">Quienes Somos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link px-3" href="#contactame">Destacados</a>
+                                <a class="nav-link px-3" href="#destacados">Destacados</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link px-3" href="#contactame">Contacto</a>
+                                <a class="nav-link px-3" href="#contacto">Contacto</a>
                             </li>
                         </ul>
                     </div>
@@ -83,7 +83,7 @@
                 <hr class=" mb-5">
                 <div class="row">
                     <div class="col-md-4">
-                        <p class=" text-center section_text"><i class="fa-solid fa-plane fa-2x"></i></p>
+                        <p class="text-center bg-info"><i class="fa-solid fa-plane fa-2x"></i></p>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque accumsan vitae sapien sit amet sodales. Duis non semper erat, et elementum lectus. Ut et euismod nisl. Praesent molestie eu nisl mollis semper. Sed volutpat scelerisque pulvinar. Sed eu vehicula sapien. Fusce non pulvinar erat. Duis leo eros, hendrerit vitae vulputate vitae, condimentum a neque. Praesent purus felis, porta at odio sit amet, congue gravida mauris. Phasellus gravida gravida lobortis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce vel volutpat leo. Morbi congue convallis aliquet. Aenean id neque eu dui fringilla pellentesque a sit amet nibh. Sed in dapibus orci, ac feugiat nibh.
                         </p>
@@ -92,10 +92,10 @@
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque accumsan vitae sapien sit amet sodales. Duis non semper erat, et elementum lectus. Ut et euismod nisl. Praesent molestie eu nisl mollis semper. Sed volutpat scelerisque pulvinar. Sed eu vehicula sapien. Fusce non pulvinar erat. Duis leo eros, hendrerit vitae vulputate vitae, condimentum a neque. Praesent purus felis, porta at odio sit amet, congue gravida mauris. Phasellus gravida gravida lobortis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce vel volutpat leo. Morbi congue convallis aliquet. Aenean id neque eu dui fringilla pellentesque a sit amet nibh. Sed in dapibus orci, ac feugiat nibh.
                         </p>
-                        <p class=" text-center section_text"><i class="fa-solid fa-mountain fa-2x"></i></p>
+                        <p class="text-center bg-info"><i class="fa-solid fa-mountain fa-2x"></i></p>
                     </div>
                     <div class="col-md-4">
-                        <p class=" text-center section_text"><i class="fa-solid fa-route fa-2x"></i></p>
+                        <p class="text-center bg-info"><i class="fa-solid fa-route fa-2x"></i></p>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque accumsan vitae sapien sit amet sodales. Duis non semper erat, et elementum lectus. Ut et euismod nisl. Praesent molestie eu nisl mollis semper. Sed volutpat scelerisque pulvinar. Sed eu vehicula sapien. Fusce non pulvinar erat. Duis leo eros, hendrerit vitae vulputate vitae, condimentum a neque. Praesent purus felis, porta at odio sit amet, congue gravida mauris. Phasellus gravida gravida lobortis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce vel volutpat leo. Morbi congue convallis aliquet. Aenean id neque eu dui fringilla pellentesque a sit amet nibh. Sed in dapibus orci, ac feugiat nibh.
                         </p>
@@ -110,7 +110,7 @@
                     <div class="col-md-3 mb-4">
                         <div class="card">
                             <img src="./assets/img/card1.jpg" class="card-img-top img-fluid" alt="Imagen de asado">
-                            <div class="card-body">
+                            <div class="card-body bg-info">
                                 <h4 class="card-title">Asado en la Patagonia</h4>
                                 <p class="card-text mb-4">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                             </div>
@@ -119,7 +119,7 @@
                     <div class="col-md-3 mb-4">
                         <div class="card">
                             <img src="./assets/img/card2.jpg" class="card-img-top img-fluid" alt="Imagen de asado">
-                            <div class="card-body">
+                            <div class="card-body bg-info">
                                 <h4 class="card-title">Asado en la Patagonia</h4>
                                 <p class="card-text mb-4">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                             </div>
@@ -128,7 +128,7 @@
                     <div class="col-md-3 mb-4">
                         <div class="card">
                             <img src="./assets/img/card3.jpg" class="card-img-top img-fluid" alt="Imagen de asado">
-                            <div class="card-body">
+                            <div class="card-body bg-info">
                                 <h4 class="card-title">Asado en la Patagonia</h4>
                                 <p class="card-text mb-4">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                             </div>
@@ -137,7 +137,7 @@
                     <div class="col-md-3 mb-4">
                         <div class="card">
                             <img src="./assets/img/card4.jpg" class="card-img-top img-fluid" alt="Imagen de asado">
-                            <div class="card-body">
+                            <div class="card-body bg-info">
                                 <h4 class="card-title">Asado en la Patagonia</h4>
                                 <p class="card-text mb-4">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                             </div>
@@ -146,7 +146,7 @@
                 </div>
             </section>
 
-            <section class="container my-5" id="destacados">
+            <section class="container my-5" id="contacto">
                 <h2 class="text-center mb-2">CONTACTO</h2>
                 <hr class=" mb-5">
 
@@ -170,7 +170,9 @@
         
         <footer class="bg-info">
             <div class="container d-flex justify-content-around align-items-center">
-                <p class="text-light py-4 m-0">VIAJES CHILE</p>
+                <a href="#">
+                    <p class="text-light py-4 m-0">VIAJES CHILE</p>
+                </a>
                 <div>
                     <a href="https://github.com/"><i class="fa-brands fa-square-github fa-2x ms-3"></i></a>
                     <a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin fa-2x ms-3"></i></a>
