--- a/index.html
+++ b/index.html
@@ -174,10 +174,18 @@
                     <p class="text-light py-4 m-0">VIAJES CHILE</p>
                 </a>
                 <div>
-                    <a href="https://github.com/"><i class="fa-brands fa-square-github fa-2x ms-3"></i></a>
-                    <a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin fa-2x ms-3"></i></a>
-                    <a href="https://x.com/"><i class="fa-brands fa-square-twitter fa-2x ms-3"></i></a>
-                    <a href="https://www.facebook.com/"><i class="fa-brands fa-square-facebook fa-2x ms-3"></i></a>
+                    <a href="https://github.com/">
+                        <i class="fa-brands fa-square-github fa-2x ms-3" data-bs-toggle="tooltip" data-bs-title="Github"></i>
+                    </a>
+                    <a href="https://www.linkedin.com/">
+                        <i class="fa-brands fa-linkedin fa-2x ms-3" data-bs-toggle="tooltip" data-bs-title="linkedin"></i>
+                    </a>
+                    <a href="https://x.com/">
+                        <i class="fa-brands fa-square-twitter fa-2x ms-3" data-bs-toggle="tooltip" data-bs-title="Twitter"></i>
+                    </a>
+                    <a href="https://www.facebook.com/">
+                        <i class="fa-brands fa-square-facebook fa-2x ms-3" data-bs-toggle="tooltip" data-bs-title="Facebook"></i>
+                    </a>
                 </div>
             </div>
         </footer>
