Se agrega favicon a la landing

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Cabin:ital,wght@0,400..700;1,400..700&family=Lobster&display=swap" rel="stylesheet">
-        <link rel="shortcut icon" type="image/png" href="./assets/img/favicon.png" />
+        <link rel="shortcut icon" type="image/svg" href="./assets/img/viajes.svg" />
         <link rel="stylesheet" href="./assets/css/style.css">
     </head>
     <body>
