--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <body>
         <header>
             <!-- navbar -->
-            <nav class="navbar navbar-expand-lg fixed-top">
+            <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="menu">
                 <div class="container">
                     <a class="navbar-brand d-flex align-items-center" href="#">
                         <img src="./assets/img/viajes.svg" alt="Logo Viaje Chile" width="30">
