Se agrega popover a las imágenes del card y se agrega js con un alert cuando se presione el botón enviar del formulario

--- a/index.html
+++ b/index.html
@@ -109,37 +109,37 @@
                 <div class="row">
                     <div class="col-md-3 mb-4">
                         <div class="card">
-                            <img src="./assets/img/card1.jpg" class="card-img-top img-fluid" alt="Imagen de asado">
+                            <img src="./assets/img/card1.jpg" class="card-img-top img-fluid" alt="Imagen de asado" data-bs-toggle="popover" data-bs-title="Quisque faucibus" data-bs-content="Maecenas mi nunc, efficitur ut mauris at, interdum elementum risus." data-bs-placement="top">
                             <div class="card-body bg-info">
-                                <h4 class="card-title">Asado en la Patagonia</h4>
-                                <p class="card-text mb-4">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                <h4 class="card-title">Etiam eleifend faucibus lobortis</h4>
+                                <p class="card-text mb-4">Cras semper pellentesque eros sit amet scelerisque. Fusce et odio sed mauris semper viverra eget maximus.</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-3 mb-4">
                         <div class="card">
-                            <img src="./assets/img/card2.jpg" class="card-img-top img-fluid" alt="Imagen de asado">
+                            <img src="./assets/img/card2.jpg" class="card-img-top img-fluid" alt="Imagen de asado" data-bs-toggle="popover" data-bs-title="Nunc tempus lacinia sem," data-bs-content="Curabitur mollis, magna eu pharetra facilisis, metus nulla consectetu" data-bs-placement="bottom">
                             <div class="card-body bg-info">
-                                <h4 class="card-title">Asado en la Patagonia</h4>
-                                <p class="card-text mb-4">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                <h4 class="card-title">Vivamus vel nulla quis lacus tincidunt euismod</h4>
+                                <p class="card-text mb-4">Maecenas mi nunc, efficitur ut mauris at, interdum elementum risus. Curabitur quis laoreet elit.</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-3 mb-4">
                         <div class="card">
-                            <img src="./assets/img/card3.jpg" class="card-img-top img-fluid" alt="Imagen de asado">
+                            <img src="./assets/img/card3.jpg" class="card-img-top img-fluid" alt="Imagen de asado" data-bs-toggle="popover" data-bs-title="Quisque scelerisque" data-bs-content="Vivamus porttitor dui eget arcu rhoncus, at aliquam enim malesuada." data-bs-placement="left">
                             <div class="card-body bg-info">
-                                <h4 class="card-title">Asado en la Patagonia</h4>
-                                <p class="card-text mb-4">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                <h4 class="card-title">Vivamus vel nulla quis lacus.</h4>
+                                <p class="card-text mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam euismod id purus nec lacinia.</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-3 mb-4">
                         <div class="card">
-                            <img src="./assets/img/card4.jpg" class="card-img-top img-fluid" alt="Imagen de asado">
+                            <img src="./assets/img/card4.jpg" class="card-img-top img-fluid" alt="Imagen de asado" data-bs-toggle="popover" data-bs-title="Phasellus hendrerit" data-bs-content="Maecenas mi nunc, efficitur ut mauris at, interdum elementum risus." data-bs-placement="right">
                             <div class="card-body bg-info">
-                                <h4 class="card-title">Asado en la Patagonia</h4>
-                                <p class="card-text mb-4">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                <h4 class="card-title">Praesent vel ullamcorper</h4>
+                                <p class="card-text mb-4">Curabitur mollis, magna eu pharetra facilisis, metus nulla consectetur elit, non sagittis nisl urna</p>
                             </div>
                         </div>
                     </div>
@@ -162,7 +162,7 @@
                         <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
                         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Escribe aquí tu mensaje"></textarea>
                     </div>
-                    <button type="button" class="btn btn-info text-light">Enviar</button>
+                    <button type="button" class="btn btn-info text-light" id="enviarCorreo">Enviar</button>
                 </form> 
             </section>
         </main>
