Se agrega smooth scroll en el menú de la landing para dirigir a cada sección

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                             <img src="./assets/img/card1.jpg" class="card-img-top img-fluid" alt="Imagen de asado" data-bs-toggle="popover" data-bs-title="Quisque faucibus" data-bs-content="Maecenas mi nunc, efficitur ut mauris at, interdum elementum risus." data-bs-placement="top">
                             <div class="card-body bg-info">
                                 <h4 class="card-title">Etiam eleifend faucibus lobortis</h4>
-                                <p class="card-text mb-4">Cras semper pellentesque eros sit amet scelerisque. Fusce et odio sed mauris semper viverra eget maximus.</p>
+                                <p class="card-text mb-4">Cras semper pellentesque eros sit amet scelerisque. Fusce et odio sed mauris semper viverra ege.</p>
                             </div>
                         </div>
                     </div>
