Se quita en responsive el link del menú, quienes somos, ya que la sección también desaparece al estar en mobile

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <li class="nav-item">
                             <a class="nav-link px-3" aria-current="page" href="#">Inicio</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item d-none d-md-block">
                             <a class="nav-link px-3" href="#quienes_somos">Quienes Somos</a>
                         </li>
                         <li class="nav-item">
